@@ -7,3 +7,5 @@ StationRenderer,40,org.lazywizard.radar.renderers.campaign.StationRenderer,data/
 CommRelayRenderer,50,org.lazywizard.radar.renderers.campaign.CommRelayRenderer,data/config/radar/radar_settings.json
 JumpPointRenderer,60,org.lazywizard.radar.renderers.campaign.JumpPointRenderer,data/config/radar/radar_settings.json
 FleetRenderer,70,org.lazywizard.radar.renderers.campaign.FleetRenderer,data/config/radar/radar_settings.json
+,,,
+MemoryUsageRenderer,9999,org.lazywizard.radar.renderers.campaign.MemoryUsageRenderer,
